Added download link & personal link

--- a/sass/global.sass
+++ b/sass/global.sass
@@ -44,6 +44,12 @@ $white:     #FFFFFF
     margin-bottom: 70px
   .download
     font-size: 1.1em
+  .made-by
+    font-size: 1em
+    font-style: italic
+    margin-top: 50px
+    a
+      color: $main
 
 #logos
   float: left
